# oelala

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GPU_DEVICE_MAPPING.md  README.md  comfy_convert.py  comfy_monitor.py  comfy_run.py  comfy_workflow_converter.py  requirements-gpu.txt  wan_22_i2v_FIXED.json  wan_benchmark.py  wan_benchmark_v2.py  wan_edge_test.py  wan_gpu_only_test.py  wan_grok_compare_test.py  wan_max_frames_test.py  wan_portrait_test.py  wan_resolution_test.py  wan_test_suite.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  mergify.yml
benchmark_results/: comfy_resources_20251231_172345.csv  comfy_run_20251231_173325.csv  comfy_run_20251231_173522.csv  comfy_run_20251231_174150.csv  comfy_run_20251231_175005.csv  comfy_run_20251231_180029.csv  comfy_run_20251231_180356.csv  comfy_run_20251231_181521.csv  comfy_run_20251231_181614.csv  comfy_run_20251231_182007.csv  comfy_run_20251231_182346.csv  comfy_run_20251231_182916.csv  comfy_run_20251231_183438.csv  comfy_run_20251231_185834.csv  comfy_run_20251231_190929.csv  comfy_run_20251231_192407.csv  max_frames.json  portrait_test.json
deploy/: oelala.service
docs/: ARCHITECTURE.md  COMFYUI_INTEGRATION.md  DOCS_CHANGELOG.md  HARDWARE_LIMITS.md  KEYWORDS.md  MULTI_GPU_SETUP.md  OELALA_WORKFLOWS_README.md  OPENPOSE_DEMO_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_PLAN.md  UI_V2_PLAN.md  WAN2_PIPELINE_SETUP.md  WAN2_README.md  WEB_INTERFACE_README.md  WORKFLOW_QUICK_REFERENCE.md
examples/: demo_openpose.py  demo_wan2.py
src/: main.cpp
(+172 files in other folders)
